Fixed closed paragraphs and made more readable

--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <h1> Snake </h1>
-        <h2> Serpentes </h2>
-        <p> I do not own a snake of my own but I do love them. I wan't to get my own when I'm older.
-          <hr>
-        <h1> Horse </h1>
-        <h2> Equus Caballus </h2>
-        <p> I again don't own a horse if ny own. But I had one. In Texas my grandpa gave her to me. I'm not sure if he still has her, since covid-19 stopped me from visiting.
-        <hr>
-        <h1> Bird </h1>
-        <h2> Aves </h2>
-        <p> I find birds really facinating, all the sizes and colors they come in. There so beautiful.But yet again I don't have one of my own. <hr>
-        <h1> Dog </h1>
-        <h2> Canis Lupis Familiaris </h2>
-        <p> This one I do have. Her name is Edith she is a mut. And i'm so thankful to have her in my life. She will just snuggle you 24/7.
-          <hr>
-          <h1> Fox </h1>
-          <h2> Vulpes Vulpes </h2>
-          <p> I do not have own one. But there so cute. I would love to just cuddle one. It's funny when they dive into the snow. 
+        <Title> My Five Favroite Pets </Title>
     </head>
     
     <body>
-	
+      	<h1> Snake </h1>
+        <h2> Serpentes </h2>
+        <p> I do not own a snake of my own but I do love them. I wan't to get my own when I'm older. </p>
+          <hr>
+
+        <h1> Horse </h1>
+        <h2> Equus Caballus </h2>
+        <p> I again don't own a horse if ny own. But I had one. In Texas my grandpa gave her to me. I'm not sure if he still has her, since covid-19 stopped me from visiting.</p>
+        <hr>
+
+        <h1> Bird </h1>
+        <h2> Aves </h2>
+        <p> I find birds really facinating, all the sizes and colors they come in. There so beautiful.But yet again I don't have one of my own. </p> 
+        <hr>
+
+        <h1> Dog </h1>
+        <h2> Canis Lupis Familiaris </h2>
+        <p> This one I do have. Her name is Edith she is a mut. And i'm so thankful to have her in my life. She will just snuggle you 24/7. </p>
+          <hr>
+          
+          <h1> Fox </h1>
+          <h2> Vulpes Vulpes </h2>
+          <p> I do not have own one. But there so cute. I would love to just cuddle one. It's funny when they dive into the snow. </p>
     </body>
 </html>
